image missing and hover on mobile menu fix

--- a/index.css
+++ b/index.css
@@ -155,6 +155,8 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Quicksand", "Quicksand";}
   #shoppingCart{
     left: 2rem;
   }
+
+  .dropdown:hover .dropdown-content {display: block;}
 }
 
 #shoppingCart{
